tests/negative/runtime/div_by_zero.stream
// EXPECT: Runtime Error
print(10 / 0);